--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>NO-AI | Forum</title>
+  <title>DESTROY-AI | Forum</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
   <div class="container">
     <aside class="sidebar">
-      <h2>NO-AI</h2>
+      <h2>DESTROY-AI</h2>
       <ul>
         <li><a href="#accueil">Accueil</a></li>
         <li><a href="#projets">Nos projets</a></li>
@@ -21,7 +21,7 @@
 
     <main class="content">
       <section id="accueil">
-        <h1>Bienvenue sur NO-AI</h1>
+        <h1>Bienvenue sur DESTROY-AI</h1>
         <p class="intro">
           L'IA détruit ce qui a été donné à Internet : le manuel, le communautaire, l'humain.<br>
           Ici, on ridiculise les sites et les personnes qui utilisent l'IA en les plagiant de manière drôle.
@@ -84,9 +84,10 @@
   </div>
 
   <footer>
-    <p>© NO-AI 2025 – Fait à la main, avec ressources UIverse (pas comme d'autres idiots)</p>
+    <p>© DESTROY-AI 2025 – Fait à la main, avec ressources UIverse (pas comme d'autres idiots)</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
