--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>DESTROY-AI | Forum</title>
+  <title>DESTROY-AI</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -90,4 +90,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
